--- a/Best_Current_Dinesh/package.json
+++ b/Best_Current_Dinesh/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.10",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "telesignsdk": "^2.2.1"
   }
 }
