--- a/uzhavam/api/package.json
+++ b/uzhavam/api/package.json
@@ -16,6 +16,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.10",
     "nodemon": "^2.0.6",
-    "telesignsdk": "^2.2.1"
+    "plivo": "^4.13.0",
+    "telesignsdk": "^2.2.1",
+    "twilio": "^3.55.0"
   }
 }
