--- a/Best_Current_Dinesh/package.json
+++ b/Best_Current_Dinesh/package.json
@@ -1,21 +1,23 @@
 {
   "name": "best_delivery",
   "version": "1.0.0",
+  "homepage": "http://localhost:3000/",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "server": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.10",
-    "nodemon": "^2.0.6",
+    "nodemon": "^2.0.7",
     "telesignsdk": "^2.2.1"
   }
 }
