--- a/Best_Current_Dinesh/package.json
+++ b/Best_Current_Dinesh/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.10",
     "nodemon": "^2.0.7",
-    "telesignsdk": "^2.2.1"
+    "telesignsdk": "^2.2.1",
+    "validator": "^13.5.2"
   }
 }
