--- a/uzhavam/ui/package.json
+++ b/uzhavam/ui/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "font-awesome": "^4.7.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
