--- a/uzhavam/ui/package.json
+++ b/uzhavam/ui/package.json
@@ -12,7 +12,9 @@
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
